src/components/discover/discover.module.css
.discover,
.enjoy,
.why {
    margin: 0 93px;
    font-family: 'Playfair Display';
    font-style: normal;
}

.discover {
    margin-top: 71px;
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 36px;
    justify-content: center;
    position: relative;
    flex-wrap: wrap;
}

.discover h1 {
    font-weight: 700;
    font-size: 54px;
    line-height: 72px;
    color: #603809;
}

.discover p {
    font-weight: 400;
    font-size: 20px;
    line-height: 34px;
    color: #707070;
    max-width: 585px;
    margin: 29px 0;
}


.blast {
    position: absolute;
    left: -93px;
    bottom: -127px;
}




/* Contemplating */
.enjoy {
    display: flex;
    flex-direction: column;
    align-items: center;
    position: relative;
    padding-top: 82px;
}

.blast2 {
    position: absolute;
    right: -93px;
    bottom: -131px;
}

.blast2 img {
    transform: scaleX(-1);
}

.headingOne {
    font-weight: 700;
    font-size: 54px;
    line-height: 72px;
    color: #603809;
    text-align: center;
    z-index: 20;
}

.pNorm {
    font-weight: 400;
    font-size: 20px;
    line-height: 34px;
    text-align: center;
    color: #707070;
    margin-top: 16px;
}

.why {
    margin-bottom: 82px;
    display: flex;
    flex-direction: column;
}

.pSmall {
    font-weight: 400;
    font-size: 20px;
    line-height: 27px;
    text-align: center;
    color: #707070;
}

.headingTwo{
    font-weight: 700;
    font-size: 30px;
    line-height: 40px;
    color: #603809;
    text-align: center;
    margin-bottom: 24px;
}

.why button{
    align-self: center;
}

@media screen and (max-width: 850px) {
    .discover,
    .enjoy,
    .why {
        width: 90%;
        margin: 0 auto;
    }
    .why {
        margin-bottom: 72px;
    }
    .blast2 {
        right: -10%;
        bottom: -131px;
    }
    .blast2 img{
        opacity: 0.4;
    }
}

@media screen and (max-width: 556px) {
    .cupbeans{
        width: max-content;
        height: auto;
    }
    .cupbeans img{
        width: 100%;
        height: 100%;
        object-fit: contain;
    }

}

